--- a/src/vk/vk.csproj
+++ b/src/vk/vk.csproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>net5;netstandard1.4</TargetFrameworks>
     <OutputType>Library</OutputType>
     <AssemblyName>vk</AssemblyName>
-    <AssemblyVersion>1.0.25</AssemblyVersion>
+    <AssemblyVersion>1.0.26</AssemblyVersion>
     <RootNamespace>Vulkan</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ProjectGuid>{D8573039-9FE1-4554-A659-4E77CFBA83C1}</ProjectGuid>
@@ -12,7 +12,7 @@
     <DefineConstants>$(DefineConstants);CALLI_STUBS</DefineConstants>
 
     <!-- Package Info -->
-    <PackageId>Vk</PackageId>
+    <PackageId>ppy.Vk</PackageId>
     <PackageVersion>$(AssemblyVersion)</PackageVersion>
     <Description>Low-level bindings for the Vulkan graphics and compute API.</Description>
     <PackageTags>Vulkan Graphics 3D GPU Games Khronos</PackageTags>
